--- a/data/projects.json
+++ b/data/projects.json
@@ -4,19 +4,35 @@
       "featured": true,
       "name": "Checklatey",
       "url": "https://checklatey.pc.codes",
-      "description": "like Ninite, for the Chocolatey package manager for Windows",
+      "description": "like Ninite, for the Chocolatey package manager for Windows. a simple checklist of apps you might want to install on a fresh PC",
+      "stack": ["SvelteJS"],
       "imagePath": "/images/checklatey-logo.svg"
     },
     {
       "featured": true,
       "name": "Bitwits",
       "url": "https://bitwits.co",
-      "description": "a free and fun party game of head-to-head wits"
+      "description": "a free and fun party game of head-to-head wits. built using React and Node.js, especially socket.io",
+      "stack": ["ReactJS", "Node.js", "Socket.IO"]
+    },
+    {
+      "featured": true,
+      "name": "Forgot My Slides",
+      "url": "https://pptx.pc.codes",
+      "description": "a random powerpoint generator that pulls image and text from a variety of sources. great for powerpoint karaoke, or in a pinch, board meetings",
+      "stack": ["Node.js", "Vue.js"]
     },
     {
       "name": "Powerrank.io",
       "url": "https://powerrank.pc.codes",
-      "description": "My first database-through-SPA full stack app. A site that lets you rank things, your friend rank things, and everybody find the one true ranking of things"
+      "description": "my first database-through-SPA full stack app. A site that lets you rank things, your friend rank things, and everybody find the one true ranking of things",
+      "stack": ["Vue.js", "Node.js", "MongoDB"]
+    },
+    {
+      "name": "Inspopaper",
+      "url": "#",
+      "description": "a Slack bot written in Python that turns any message into an inspirational wallpaper. no longer online, this was very much a lessons learned project",
+      "stack": ["Python", "Google Cloud", "PostgreSQL", "Slack"]
     }
   ]
 }
